--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-    <input class="input" type="text">
-    <button class="btn" type="button">bbbbbbb</button>
-    <ul class="kountri">
-
-    </ul>
+<body class="body">
+    <div class="box">
+        <input class="input" type="text" placeholder="Вводьте повну назву країгт">
+        <button class="btn" type="button">Знайти</button>
+        <ul class="kountri">
+    
+        </ul>
+    </div>    
     <script type="module" src="./index.js"></script>
 </body>
 </html>
